--- a/apps/hello-world/bsconfig.json
+++ b/apps/hello-world/bsconfig.json
@@ -1,19 +1,4 @@
 {
-  "rootDir": "src",
-  "files": ["manifest", "source/*.*", "source/**/*.*", "components/**/*.*"],
-  "autoImportComponentScript": true,
-  "createPackage": false,
-  "stagingFolderPath": "build",
-  "plugins": ["rooibos-roku"],
-  "rooibos": {
-    "isRecordingCodeCoverage": false,
-    "testsFilePattern": null,
-    "tags": ["!integration", "!deprecated", "!fixme"],
-    "showOnlyFailures": true,
-    "catchCrashes": true,
-    "lineWidth": 70,
-    "failFast": false,
-    "sendHomeOnFinish": false
-  },
-  "sourceMap": true
+  "extends": "./node_modules/@acme/roku-rig/profiles/app/bsconfig-base.json",
+  "rootDir": "src"
 }
