experiment with sideloading to local roku

--- a/apps/hello-world/package.json
+++ b/apps/hello-world/package.json
@@ -7,7 +7,8 @@
     "_phase:build": "bsc",
     "_phase:test": "echo rooibos?",
     "build": "bsc",
-    "test": "echo rooibos?"
+    "test": "echo rooibos?",
+    "dev": "node dev.js"
   },
   "keywords": ["ropm"],
   "author": "",
@@ -16,7 +17,8 @@
     "brighterscript": "~0.57.2",
     "@rokucommunity/bslint": "~0.7.5",
     "roku-deploy": "~3.9.1",
-    "rooibos-roku": "~5.2.2"
+    "rooibos-roku": "~5.2.2",
+    "dotenv": "~16.0.2"
   },
   "dependencies": {
     "@acme/roku-rig": "workspace:*"
