--- a/apps/hello-world/package.json
+++ b/apps/hello-world/package.json
@@ -8,7 +8,7 @@
     "_phase:test": "echo rooibos?",
     "build": "bsc",
     "test": "echo rooibos?",
-    "dev": "node dev.js"
+    "dev": "node scripts/dev.js"
   },
   "keywords": ["ropm"],
   "author": "",
