--- a/apps/hello-world/bsconfig.json
+++ b/apps/hello-world/bsconfig.json
@@ -1,4 +1,17 @@
 {
   "extends": "./node_modules/@acme/roku-rig/profiles/app/bsconfig-base.json",
-  "rootDir": "src"
+  "rootDir": "src",
+  "files": [
+    // app
+    "manifest",
+    "source/**/*.*",
+    "components/**/*.*",
+    "images/**/*.*",
+
+    // hello-world-constants
+    {
+      "src": "../../../libraries/hello-world-constants/src/source/**/*.*",
+      "dest": "source/hello-world-constants"
+    }
+  ]
 }
