update base rig

--- a/rigs/roku-rig/profiles/app/bsconfig-base.json
+++ b/rigs/roku-rig/profiles/app/bsconfig-base.json
@@ -1,6 +1,11 @@
 {
   "rootDir": "src",
-  "files": ["manifest", "source/*.*", "source/**/*.*", "components/**/*.*"],
+  "files": [
+    "manifest",
+    "source/**/*.*",
+    "components/**/*.*",
+    "images/**/*.*"
+  ],
   "autoImportComponentScript": true,
   "createPackage": false,
   "stagingFolderPath": "build",
