Convert from direct path reference to rush workspace reference

--- a/apps/hello-world/bsconfig.json
+++ b/apps/hello-world/bsconfig.json
@@ -8,7 +8,7 @@
     "images/**/*.*",
 
     {
-      "src": "../../../libraries/hello-world-constants/src/source/**/*.*",
+      "src": "../node_modules/@acme/hello-world-constants/src/source/**/*.*",
       "dest": "source/hello-world-constants"
     }
   ]
