--- a/apps/hello-world/bsconfig.json
+++ b/apps/hello-world/bsconfig.json
@@ -1,12 +1,17 @@
 {
   "extends": "./node_modules/@acme/roku-rig/profiles/app/bsconfig-base.json",
   "rootDir": "src",
+  "plugins": [
+    "rooibos-roku"
+  ],
   "files": [
+    // src
     "manifest",
     "source/**/*.*",
     "components/**/*.*",
     "images/**/*.*",
 
+    // hello-world-constants
     {
       "src": "../node_modules/@acme/hello-world-constants/src/source/**/*.*",
       "dest": "source/hello-world-constants"
