--- a/libraries/simple-math/bsconfig.json
+++ b/libraries/simple-math/bsconfig.json
@@ -2,7 +2,8 @@
   "extends": "./node_modules/@acme/roku-rig/profiles/app/bsconfig-base.json",
   "rootDir": "src",
   "plugins": [
-    "rooibos-roku"
+    "rooibos-roku",
+    "@acme/bsc-plugin-ropm2"
   ],
   "files": [
     // src
