--- a/libraries/simple-math/bsconfig.json
+++ b/libraries/simple-math/bsconfig.json
@@ -11,5 +11,8 @@
     "source/**/*.*",
     "components/**/*.*",
     "images/**/*.*"
-  ]
+  ],
+  "packages": {
+    "@acme/hello-world-constants": "Constants"
+  }
 }
