--- a/libraries/simple-math/package.json
+++ b/libraries/simple-math/package.json
@@ -24,6 +24,7 @@
     "@acme/roku-rig": "workspace:*",
     "yargs": "~17.6.0",
     "jju": "~1.4.0",
-    "@acme/bsc-plugin-ropm2": "workspace:*"
+    "@acme/bsc-plugin-ropm2": "workspace:*",
+    "@acme/hello-world-constants": "workspace:*"
   }
 }
